complete etch-a-sketch project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <h1 class="heading">Etch-a-Sketch</h1>
         <button type="button" class="gridChanger">16 X 16 Grid</button>
         <div class="container"></div>
     </body>
