add function to change color

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     </head>
     <body>
         <h1 class="heading">Etch-a-Sketch</h1>
-        <button type="button" class="gridChanger">16 X 16 Grid</button>
+        <div class="control-group">
+            <button  class="gridChanger">16 X 16 Grid</button>
+            <button class="eraser">erase</button>
+            <button class="clear">clear all board</button>
+            <input type='color'>
+        </div>
         <div class="container"></div>
     </body>
 </html>
