add backgrond image and erase button

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <h1 class="heading">Etch-a-Sketch</h1>
         <div class="control-group">
+            <h1 class="heading">Etch a Sketch</h1>
             <button  class="gridChanger">16 X 16 Grid</button>
-            <button class="eraser">erase</button>
-            <button class="clear">clear all board</button>
+            <button class="eraser">Erase</button>
+            <button class="clear">Clear all board</button>
             <input type='color'>
+            <p>Select a color to draw</p>
         </div>
         <div class="container"></div>
     </body>
