change elements size and add readme

--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
             <h1 class="heading">Etch a Sketch</h1>
             <button class="gridChanger">16 X 16 Grid</button>
             <button class="eraser">Erase</button>
-            <button class="clear">Clear all board</button>
-            <input type='color'>
-            <p>Select a color to draw</p>
+            <button class="clear">Clear board</button>
+            <label for="color">Select a color to draw</label>
+            <input id="color" type='color'>
+            <div class="rules">
+                <h2>How to Use</h2>
+                <p>Click on yellow button to change the gird size (max 100X100).</p>
+                <p>Double click and hover over white screen to start drawing.</p>
+                <p>To erase your drawing, click on green button and then double click and hover over white screen.</p>
+                <p>To restart drawing, select a color.</p>
+            </div>
         </div>
         <div class="container"></div>
     </body>
